--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@200&display=swap" rel="stylesheet">
   <script src="https://kit.fontawesome.com/18ef578806.js" crossorigin="anonymous"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 </head>
 
 <body>
@@ -22,7 +23,7 @@
     <div id="lpanel">
       <p id="c_material"><i class="fa-solid fa-folder-tree"></i>Course Materials</p>
       <div id="material_table"> 
-        <ul class="my_treeview"></ul>
+        <ul id="my_treeview"></ul>
       </div>
     </div>
     <div id="cpanel">
@@ -104,10 +105,6 @@
       </div>
     </div>
   </div>
-
-
-
-
 
   <script src="data.js"></script>
   <script src="script.js"></script>
