--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <center><img id="iit_logo"
       src="https://upload.wikimedia.org/wikipedia/en/thumb/6/61/IIT_Bhilai_logo.png/220px-IIT_Bhilai_logo.png"
       alt="IIT Bhilai Logo"></center>
-  <p id="subtitle">IIT Bhilai : 2022 - 2023 M</p>
+  <p id="subtitle">IIT Bhilai : 2024 - 2025 M</p>
   <div id="container">
     <div id="lpanel">
       <p id="c_material"><i class="fa-solid fa-folder-tree"></i>Course Materials</p>
@@ -35,23 +35,18 @@
             <p>(Instructor)</p>
           </div>
           <div class="inst_elem">
-            <img class="inst" src="Assets/Atharva.png">
-            <p>Atharva Inamdar</p>
+            <img class="inst" src="Assets/Brishti.jpeg">
+            <p>Brishti De</p>
             <p>(TA)</p>
           </div>
           <div class="inst_elem">
-            <img class="inst" src="Assets/Ranjhit.jpeg">
-            <p>Ranjith Vutnoor</p>
+            <img class="inst" src="Assets/Sanjeevni.jpeg">
+            <p>Sanjeevni</p>
             <p>(TA)</p>
           </div>
           <div class="inst_elem">
             <img class="inst" src="Assets/Kartikeya.jpeg">
             <p>Kartikeya Saraswat</p>
-            <p>(TA)</p>
-          </div>
-          <div class="inst_elem">
-            <img class="inst" src="Assets/sudev.jpeg">
-            <p>Sudev Kumar Padhi</p>
             <p>(TA)</p>
           </div>
         </div>
