--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           </div>
           <div class="inst_elem">
             <img class="inst" src="Assets/Sanjeevni.jpeg">
-            <p>Sanjeevni</p>
+            <p>Sanjeevani Bhopre</p>
             <p>(TA)</p>
           </div>
           <div class="inst_elem">
